crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_finding_2.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: low
category: long_lived_credential
nodes_involved:
  - 12
message: "'PUBLISH_API_KEY' looks like a long-lived static credential"
recommendation:
  type: federate_identity
  static_secret: PUBLISH_API_KEY
  oidc_provider: "GitHub Actions OIDC (id-token: write)"
source: built-in
time_to_fix: large
