crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_finding_7.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: untrusted_with_authority
nodes_involved:
  - 6
  - 0
message: "Untrusted step 'build[2]' has direct access to identity 'GITHUB_TOKEN'"
recommendation:
  type: reduce_permissions
  current: write-all
  minimum: minimal required scope
source: built-in
