crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_finding_9.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: untrusted_with_authority
nodes_involved:
  - 11
  - 0
message: "Untrusted step 'publish[1]' has direct access to identity 'GITHUB_TOKEN'"
recommendation:
  type: reduce_permissions
  current: write-all
  minimum: minimal required scope
source: built-in
