crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_json_report.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: json
---
findings:
  - authority_kinds:
      - oidc_identity
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: fa132b97-5f37-5798-83c0-72b27e4c582b
    fingerprint: f6466321cda089e1d5656780527a482e
    message: "GITHUB_TOKEN reaches 5 sinks via authority propagation: [actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29, actions/upload-artifact@v4, release-bundle, actions/download-artifact@v4, untrusted-org/publish-action@main]"
    nodes_involved:
      - 0
      - 1
      - 5
      - 7
      - 8
      - 10
    path:
      boundary_crossing:
        - first_party
        - third_party
      crossed_boundary: true
      edges:
        - 0
      sink: 1
      source: 0
    recommendation:
      action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
      type: manual
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_33915b7ba286d7f88c0d210a9772364c
  - authority_kinds:
      - credential_named_variable
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: aef900e2-a461-5371-be55-01e9607228fe
    fingerprint: 555d6201a1d6e17fdf87f619dde772f5
    message: PUBLISH_API_KEY propagated to untrusted-org/publish-action@main across trust boundary
    nodes_involved:
      - 12
      - 10
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 10
      sink: 10
      source: 12
    recommendation:
      command: tsafe exec --ns <scoped-namespace> -- <command>
      explanation: "Scope PUBLISH_API_KEY to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
      type: tsafe_remediation
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_0939649aac629ce8345122114f23b694
  - authority_kinds:
      - credential_named_variable
    category: long_lived_credential
    confidence_scope: yaml_only
    finding_group_id: d160b45f-5db9-5b95-b162-936fd9512642
    fingerprint: 5409465ea4fbd8874445f720b1c6be67
    message: "'PUBLISH_API_KEY' looks like a long-lived static credential"
    nodes_involved:
      - 12
    recommendation:
      oidc_provider: "GitHub Actions OIDC (id-token: write)"
      static_secret: PUBLISH_API_KEY
      type: federate_identity
    rule_id: long_lived_credential
    severity: low
    source: built-in
    suppression_key: sk1_14ea24fac3d87cd99e8d53c46bb2b152
    time_to_fix: large
  - authority_kinds:
      - oidc_identity
    category: over_privileged_identity
    confidence_scope: yaml_only
    finding_group_id: 6898f968-e7d6-5c4c-8000-bec8f6d0590a
    fingerprint: eb5f396108973a0ba766ed2a6170b781
    message: "GITHUB_TOKEN has broad scope (permissions: 'write-all') — likely broader than needed"
    nodes_involved:
      - 0
      - 2
      - 3
      - 6
      - 9
      - 11
    recommendation:
      current: write-all
      minimum: "{ contents: read }"
      type: reduce_permissions
    rule_id: over_privileged_identity
    severity: high
    source: built-in
    suppression_key: sk1_68ee7c48dc7a20cde2018e700c80ec17
    time_to_fix: small
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: 9bcba823-ddb7-5ae0-ac4b-22a385b0f2fa
    fingerprint: 8089986d1e3084c3a228edeaa092e80e
    message: "[action_major_version_pin_without_sha] actions/download-artifact@v4 is pinned only to a mutable major tag; pin to a full commit SHA"
    nodes_involved:
      - 8
    recommendation:
      current: actions/download-artifact@v4
      pinned: actions/download-artifact@<40-char-sha>
      type: pin_action
    rule_id: action_major_version_pin_without_sha
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: medium
    source: built-in
    suppression_key: sk1_71e20864a547f607bba591e88fa9f5e0
    time_to_fix: trivial
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: 17de6c81-06a2-5e7a-9c3d-1889779f5edd
    fingerprint: 94beef950536ef7aa612057dc37926ca
    message: "[action_major_version_pin_without_sha] actions/upload-artifact@v4 is pinned only to a mutable major tag; pin to a full commit SHA"
    nodes_involved:
      - 5
    recommendation:
      current: actions/upload-artifact@v4
      pinned: actions/upload-artifact@<40-char-sha>
      type: pin_action
    rule_id: action_major_version_pin_without_sha
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: medium
    source: built-in
    suppression_key: sk1_71e20864a547f607bba591e88fa9f5e0
    time_to_fix: trivial
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: a3a646b9-751c-5d42-be06-943c46adf52b
    fingerprint: e6e2047a4544d4d2da9d86be699f4be7
    message: actions/download-artifact@v4 is not pinned to a SHA digest
    nodes_involved:
      - 8
    recommendation:
      current: actions/download-artifact@v4
      pinned: actions/download-artifact@<sha256-digest>
      type: pin_action
    rule_id: unpinned_action
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: medium
    source: built-in
    suppression_key: sk1_c0aef7663c9bc2678abfaeef405f493c
    time_to_fix: trivial
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: 02044fc9-a773-5099-8eed-8b4e9367b47b
    fingerprint: df33aad19766c9fb605775a339373b2d
    message: actions/upload-artifact@v4 is not pinned to a SHA digest
    nodes_involved:
      - 5
    recommendation:
      current: actions/upload-artifact@v4
      pinned: actions/upload-artifact@<sha256-digest>
      type: pin_action
    rule_id: unpinned_action
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: medium
    source: built-in
    suppression_key: sk1_c0aef7663c9bc2678abfaeef405f493c
    time_to_fix: trivial
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: fceb42d4-c697-55c1-8ad8-d5916c728003
    fingerprint: 0f19d8c18efc7cb349d8c50246c2a7b5
    message: untrusted-org/publish-action@main is not pinned to a SHA digest
    nodes_involved:
      - 10
    recommendation:
      current: untrusted-org/publish-action@main
      pinned: untrusted-org/publish-action@<sha256-digest>
      type: pin_action
    rule_id: unpinned_action
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: high
    source: built-in
    suppression_key: sk1_c0aef7663c9bc2678abfaeef405f493c
    time_to_fix: trivial
  - attacker_surface_kinds:
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: 728a0898-4924-5b33-92cf-d4aeafebe671
    fingerprint: 7ceb15435a1e0f35f92ddc1c251e8e53
    message: "Untrusted step 'build[2]' has direct access to identity 'GITHUB_TOKEN'"
    nodes_involved:
      - 6
      - 0
    recommendation:
      current: write-all
      minimum: minimal required scope
      type: reduce_permissions
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_fd1debe40c5f2b15d171be6768a1c3fe
  - attacker_surface_kinds:
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: 6f87ec4a-92c5-5183-9ce5-3210aa5e4b2d
    fingerprint: 219b7be738f6812d3266e2977467c81f
    message: "Untrusted step 'publish[0]' has direct access to identity 'GITHUB_TOKEN'"
    nodes_involved:
      - 9
      - 0
    recommendation:
      current: write-all
      minimum: minimal required scope
      type: reduce_permissions
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_fd1debe40c5f2b15d171be6768a1c3fe
  - attacker_surface_kinds:
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: 8b28c8af-f18a-594c-a973-aedc13f0dd14
    fingerprint: b0276e750137ef0e6a619ef57c151c98
    message: "Untrusted step 'publish[1]' has direct access to identity 'GITHUB_TOKEN'"
    nodes_involved:
      - 11
      - 0
    recommendation:
      current: write-all
      minimum: minimal required scope
      type: reduce_permissions
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_fd1debe40c5f2b15d171be6768a1c3fe
  - attacker_surface_kinds:
      - untrusted_step
    authority_kinds:
      - credential_named_variable
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: d529b46d-44d2-5b64-99ac-c7aef6e2260a
    fingerprint: 121b96ea9a14fa44314f674ba440780b
    message: "Untrusted step 'publish[1]' has direct access to secret 'PUBLISH_API_KEY'"
    nodes_involved:
      - 11
      - 12
    recommendation:
      reason: "Untrusted step 'publish[1]' has direct access to secret 'PUBLISH_API_KEY'"
      spec_hint: "cellos run --network deny-all --broker env:PUBLISH_API_KEY"
      type: cellos_remediation
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_803e1c6271a16ed88c4ed08201c6599f
  - attacker_surface_kinds:
      - script_sink
      - untrusted_checkout
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: uplift_without_attestation
    confidence_scope: yaml_only
    finding_group_id: fe4951f7-5fdc-574d-856d-680d47382f0a
    fingerprint: 18b8b7e3d56ad063b566d938ceb7bcb1
    message: 5 step(s) use OIDC/federated identity but no provenance attestation step was detected — artifact integrity cannot be verified
    nodes_involved:
      - 2
      - 3
      - 6
      - 9
      - 11
      - 0
    recommendation:
      action: "Add 'actions/attest-build-provenance' after your build step (GHA) to provide SLSA provenance. See https://docs.github.com/en/actions/security-guides/using-artifact-attestations"
      type: manual
    rule_id: uplift_without_attestation
    runtime_preconditions:
      - downstream identity provider accepts the issued OIDC token
      - the configured audience or cloud role grants useful authority
    severity: info
    source: built-in
    suppression_key: sk1_553d7f856eaaf976db631804d106814e
graph:
  completeness: complete
  edges:
    - from: 2
      id: 0
      kind: uses_image
      to: 1
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 2
      id: 1
      kind: has_access_to
      to: 0
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 3
      id: 2
      kind: has_access_to
      to: 0
    - from: 3
      id: 3
      kind: has_access_to
      to: 4
    - from: 6
      id: 4
      kind: uses_image
      to: 5
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 6
      id: 5
      kind: has_access_to
      to: 0
    - from: 6
      id: 6
      kind: produces
      to: 7
    - from: 9
      id: 7
      kind: uses_image
      to: 8
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 9
      id: 8
      kind: has_access_to
      to: 0
    - from: 7
      id: 9
      kind: consumes
      to: 9
    - from: 11
      id: 10
      kind: uses_image
      to: 10
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 11
      id: 11
      kind: has_access_to
      to: 0
    - from: 11
      id: 12
      kind: has_access_to
      to: 12
  metadata:
    platform: github-actions
    trigger: push
    triggers: push
  nodes:
    - id: 0
      kind: identity
      metadata:
        identity_scope: broad
        oidc: "true"
        permissions: write-all
      name: GITHUB_TOKEN
      trust_zone: first_party
    - id: 1
      kind: image
      metadata:
        digest: a5ac7e51b41094c92402da3b24376905380afc29
      name: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
      trust_zone: third_party
    - id: 2
      kind: step
      metadata:
        checkout_self: "true"
        gha_action: actions/checkout
        gha_runs_on: ubuntu-latest
        job_name: build
      name: "build[0]"
      trust_zone: third_party
    - id: 3
      kind: step
      metadata:
        gha_env_assignments: "SIGNING_KEY=${{ secrets.SIGNING_KEY }}"
        gha_runs_on: ubuntu-latest
        job_name: build
        script_body: make release
      name: Build with secrets
      trust_zone: first_party
    - id: 4
      kind: secret
      metadata: {}
      name: SIGNING_KEY
      trust_zone: first_party
    - id: 5
      kind: image
      metadata: {}
      name: actions/upload-artifact@v4
      trust_zone: untrusted
    - id: 6
      kind: step
      metadata:
        gha_action: actions/upload-artifact
        gha_runs_on: ubuntu-latest
        gha_with_inputs: "name=release-bundle\npath=dist/"
        job_name: build
      name: "build[2]"
      trust_zone: untrusted
    - id: 7
      kind: artifact
      metadata: {}
      name: release-bundle
      trust_zone: untrusted
    - id: 8
      kind: image
      metadata: {}
      name: actions/download-artifact@v4
      trust_zone: untrusted
    - id: 9
      kind: step
      metadata:
        downloads_artifact: "true"
        gha_action: actions/download-artifact
        gha_runs_on: ubuntu-latest
        gha_with_inputs: name=release-bundle
        job_name: publish
      name: "publish[0]"
      trust_zone: untrusted
    - id: 10
      kind: image
      metadata: {}
      name: untrusted-org/publish-action@main
      trust_zone: untrusted
    - id: 11
      kind: step
      metadata:
        gha_action: untrusted-org/publish-action
        gha_runs_on: ubuntu-latest
        gha_with_inputs: "api-key=${{ secrets.PUBLISH_API_KEY }}\nartifact-path=dist/"
        job_name: publish
      name: "publish[1]"
      trust_zone: untrusted
    - id: 12
      kind: secret
      metadata: {}
      name: PUBLISH_API_KEY
      trust_zone: first_party
  source:
    file: test.yml
schema_uri: "https://taudit.dev/schemas/taudit-report.schema.json"
schema_version: 1.0.0
summary:
  completeness: complete
  critical: 6
  graph_risk_summary:
    authority_roots: 3
    delegation_hops: 0
    mutable_refs: 3
    protected_resource_categories:
      - identity
      - oidc_identity
      - secret
    publication_adjacent_sinks: 2
    untrusted_sinks: 7
  high: 2
  info: 1
  low: 1
  medium: 4
  total_edges: 13
  total_findings: 14
  total_nodes: 13
